--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Edu-CALL/title>
+    <title>Edu-CALL</title>
   </head>
   <body>
     <noscript>Let's convert invisible world into visible world with edugyan group.</noscript>
